# shapi

./: Readme.md  pyproject.toml
docs/: Readme.md
src/shapi/: __init__.py  client.py  console.py
src/shapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: Readme.md
