[tool.poetry]
name = "shapi"
version = "0.1.0"
description = "A python client to interact with Software Herritage API"
repository = "https://github.com/rahulunair/shapi.git"
authors = ["rahulunair <rahulunair@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
nox = "^2020.5.24"
flake8 = "^3.8.3"
black = "^19.10b0"
pytest = "^5.4.3"
safety = "^1.9.0"
darglint = "^1.4.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
sphinx = "^3.1.1"
sphinx-autodoc-typehints = "^1.10.3"
mypy = "^0.780"

[tool.poetry.scripts]
shapi = "shapi.console:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

